register account and order service started
