# api/swagger.yaml
@@ -1,4 +1,3 @@
----
 swagger: "2.0"
 info:
   description: "This is a InRange server.."
@@ -54,7 +53,6 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/User"
-      x-swagger-router-controller: "User"
   /user/{userId}:
     get:
       tags:
@@ -65,11 +63,11 @@ paths:
       produces:
       - "application/xml"
       - "application/json"
-      parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      parameters: 
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - name: "userId"
         in: "path"
         description: "The id that needs to be fetched."
@@ -84,7 +82,6 @@ paths:
           description: "Invalid username supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "User"
     put:
       tags:
       - "user"
@@ -94,11 +91,11 @@ paths:
       produces:
       - "application/xml"
       - "application/json"
-      parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      parameters: 
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - name: "userId"
         in: "path"
         description: "name that need to be updated"
@@ -115,7 +112,6 @@ paths:
           description: "Invalid user ID supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "User"
     delete:
       tags:
       - "user"
@@ -125,11 +121,11 @@ paths:
       produces:
       - "application/xml"
       - "application/json"
-      parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      parameters: 
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - name: "userId"
         in: "path"
         description: "The name that needs to be deleted"
@@ -140,32 +136,30 @@ paths:
           description: "Invalid userId supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "User"
   /order:
     post:
       tags:
       - "order"
       summary: "Add Order"
       description: "This can only be done by the logged in user."
-      operationId: "addOrder"
+      operationId: "newOrder"
       produces:
       - "application/xml"
       - "application/json"
       parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - in: "body"
         name: "body"
         description: "Order object"
         required: true
         schema:
-          $ref: "#/definitions/Order"
+          $ref: "#/definitions/LoginRequest"
       responses:
         default:
           description: "successful operation"
-      x-swagger-router-controller: "Order"
   /orderlist:
     post:
       tags:
@@ -177,10 +171,10 @@ paths:
       - "application/xml"
       - "application/json"
       parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - in: "body"
         name: "body"
         description: "Order filter"
@@ -190,7 +184,6 @@ paths:
       responses:
         default:
           description: "successful operation"
-      x-swagger-router-controller: "Order"
   /order/{orderId}:
     get:
       tags:
@@ -201,11 +194,11 @@ paths:
       produces:
       - "application/xml"
       - "application/json"
-      parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      parameters: 
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - name: "orderId"
         in: "path"
         description: "The name that needs to be fetched. Use user1 for testing. "
@@ -220,7 +213,6 @@ paths:
           description: "Invalid username supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "Order"
     put:
       tags:
       - "order"
@@ -230,11 +222,11 @@ paths:
       produces:
       - "application/xml"
       - "application/json"
-      parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      parameters: 
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - name: "orderId"
         in: "path"
         description: "name that need to be updated"
@@ -251,7 +243,6 @@ paths:
           description: "Invalid user supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "Order"
     delete:
       tags:
       - "order"
@@ -261,11 +252,11 @@ paths:
       produces:
       - "application/xml"
       - "application/json"
-      parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      parameters: 
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - name: "orderId"
         in: "path"
         description: "The name that needs to be deleted"
@@ -276,7 +267,6 @@ paths:
           description: "Invalid orderId supplied"
         404:
           description: "Order not found"
-      x-swagger-router-controller: "Order"
   /account/login:
     post:
       tags:
@@ -303,7 +293,6 @@ paths:
           description: "Invalid username supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "Account"
   /account/logout:
     get:
       tags:
@@ -314,11 +303,11 @@ paths:
       produces:
       - "application/xml"
       - "application/json"
-      parameters:
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      parameters: 
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       responses:
         200:
           description: "successful operation"
@@ -328,7 +317,6 @@ paths:
           description: "Invalid username supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "Account"
   /account/changepassword/{userId}:
     post:
       tags:
@@ -345,10 +333,10 @@ paths:
         description: "userId fetched respective user"
         required: true
         type: "string"
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - in: "body"
         name: "body"
         description: "Change User Password"
@@ -364,7 +352,6 @@ paths:
           description: "Invalid username supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "Account"
   /account/forgetpassword/{mobileNumber}:
     post:
       tags:
@@ -381,10 +368,10 @@ paths:
         description: "Mobilenumber fetched respective user"
         required: true
         type: "string"
-      - name: "auth_Token"
-        in: "header"
-        required: true
+      - in: header
+        name: auth_Token
         type: "string"
+        required: true
       - in: "body"
         name: "body"
         description: "Forget User Password"
@@ -400,7 +387,6 @@ paths:
           description: "Invalid username supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "Account"
 securityDefinitions:
   petstore_auth:
     type: "oauth2"
@@ -417,37 +403,11 @@ definitions:
   Order:
     type: "object"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
-      petId:
-        type: "integer"
-        format: "int64"
-      quantity:
-        type: "integer"
-        format: "int32"
-      shipDate:
-        type: "string"
-        format: "date-time"
       status:
         type: "string"
         description: "Order Status"
-        enum:
-        - "placed"
-        - "approved"
-        - "delivered"
-      complete:
-        type: "boolean"
-        default: false
     xml:
       name: "Order"
-    example:
-      petId: 6
-      quantity: 1
-      id: 0
-      shipDate: "2000-01-23T04:56:07.000+00:00"
-      complete: false
-      status: "placed"
   LoginRequest:
     type: "object"
     properties:
@@ -476,192 +436,116 @@ definitions:
       mobileNumber:
         type: "string"
       securityQues:
-        type: "array"
+        type: array
         items:
-          $ref: "#/definitions/securityQue"
+          $ref: '#/definitions/securityQue'
     xml:
       name: "FogotPasswordRequest"
   AddUserRequest:
-    type: "object"
+    type: object
     properties:
-      firstName:
+      firstName: 
         type: "string"
-      lastName:
+      lastName: 
         type: "string"
-      dob:
+      dob: 
         type: "string"
         format: "date-time"
       mobileNumbers:
-        type: "array"
+        type: array
         items:
-          type: "string"
+          type: string
       emails:
-        type: "array"
+        type: array
         items:
-          type: "string"
+          type: string
     xml:
       name: "AddUserRequest"
   User:
-    type: "object"
+    type: object
     properties:
-      firstName:
+      firstName: 
         type: "string"
-      lastName:
+      lastName: 
         type: "string"
-      dob:
+      dob: 
         type: "string"
         format: "date-time"
       mobileNumbers:
-        type: "array"
+        type: array
         items:
-          type: "string"
+          type: string
       emails:
-        type: "array"
+        type: array
         items:
-          type: "string"
-      userType:
+          type: string
+      userType: 
         type: "string"
-      userId:
+      userId: 
         type: "string"
-      rating:
-        type: "number"
+      rating: 
+        type: number
       businesses:
-        $ref: "#/definitions/User_businesses"
+        type: object
+        properties:
+          imgUrl: 
+            type: string
+          rating:
+            type: number
+          catId: 
+            type: "string"
+          subCatId: 
+            type: "string"
+          name: 
+            type: "string"
       permissions:
-        type: "array"
+        type: array
         items:
-          $ref: "#/definitions/User_permissions"
+          type: object
+          properties:
+            id: 
+              type: string
+            name: 
+              type: string
+            permission: 
+              type: string
     xml:
       name: "User"
-    example:
-      emails:
-      - "emails"
-      - "emails"
-      firstName: "firstName"
-      lastName: "lastName"
-      mobileNumbers:
-      - "mobileNumbers"
-      - "mobileNumbers"
-      dob: "2000-01-23T04:56:07.000+00:00"
-      permissions:
-      - name: "name"
-        permission: "permission"
-        id: "id"
-      - name: "name"
-        permission: "permission"
-        id: "id"
-      rating: 0.80082819046101150206595775671303272247314453125
-      userType: "userType"
-      userId: "userId"
-      businesses:
-        imgUrl: "imgUrl"
-        catId: "catId"
-        rating: 6.02745618307040320615897144307382404804229736328125
-        subCatId: "subCatId"
-        name: "name"
   Meta:
-    type: "object"
+    type: object
     properties:
-      code:
-        type: "integer"
-      message:
+      code: 
+        type: integer
+      message: 
         type: "string"
     xml:
       name: "Meta"
-    example:
-      code: 0
-      message: "message"
   securityQue:
-    type: "object"
+    type: object
     properties:
-      secQuesId:
+      secQuesId: 
+        type: string
+      secQue: 
         type: "string"
-      secQue:
-        type: "string"
-      Answer:
+      Answer: 
         type: "string"
     xml:
       name: "securityQue"
   LoginResponse:
     type: "object"
     properties:
-      authToken:
-        type: "string"
+      authToken: 
+         type: "string"
       schema:
-        $ref: "#/definitions/Meta"
+        $ref: '#/definitions/Meta'
       loggedMno:
-        type: "string"
+         type: "string"
       loggeduserId:
-        type: "string"
+         type: "string"
       user_schema:
-        $ref: "#/definitions/User"
+        $ref: '#/definitions/User'
     xml:
       name: "LoginResponse"
-    example:
-      schema:
-        code: 0
-        message: "message"
-      authToken: "authToken"
-      loggedMno: "loggedMno"
-      loggeduserId: "loggeduserId"
-      user_schema:
-        emails:
-        - "emails"
-        - "emails"
-        firstName: "firstName"
-        lastName: "lastName"
-        mobileNumbers:
-        - "mobileNumbers"
-        - "mobileNumbers"
-        dob: "2000-01-23T04:56:07.000+00:00"
-        permissions:
-        - name: "name"
-          permission: "permission"
-          id: "id"
-        - name: "name"
-          permission: "permission"
-          id: "id"
-        rating: 0.80082819046101150206595775671303272247314453125
-        userType: "userType"
-        userId: "userId"
-        businesses:
-          imgUrl: "imgUrl"
-          catId: "catId"
-          rating: 6.02745618307040320615897144307382404804229736328125
-          subCatId: "subCatId"
-          name: "name"
-  User_businesses:
-    type: "object"
-    properties:
-      imgUrl:
-        type: "string"
-      rating:
-        type: "number"
-      catId:
-        type: "string"
-      subCatId:
-        type: "string"
-      name:
-        type: "string"
-    example:
-      imgUrl: "imgUrl"
-      catId: "catId"
-      rating: 6.02745618307040320615897144307382404804229736328125
-      subCatId: "subCatId"
-      name: "name"
-  User_permissions:
-    type: "object"
-    properties:
-      id:
-        type: "string"
-      name:
-        type: "string"
-      permission:
-        type: "string"
-    example:
-      name: "name"
-      permission: "permission"
-      id: "id"
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
